; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/sym53c8xx_2/extr_sym_hipd.c_sym_dump_registers.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/sym53c8xx_2/extr_sym_hipd.c_sym_dump_registers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i32 }
%struct.sym_hcb = type { i32 }

@nc_sist = common dso_local global i32 0, align 4
@nc_dstat = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sym_dump_registers(%struct.Scsi_Host* %0) #0 {
  %2 = alloca %struct.Scsi_Host*, align 8
  %3 = alloca %struct.sym_hcb*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %2, align 8
  %6 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %7 = call %struct.sym_hcb* @sym_get_hcb(%struct.Scsi_Host* %6)
  store %struct.sym_hcb* %7, %struct.sym_hcb** %3, align 8
  %8 = load %struct.sym_hcb*, %struct.sym_hcb** %3, align 8
  %9 = load i32, i32* @nc_sist, align 4
  %10 = call i32 @INW(%struct.sym_hcb* %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load %struct.sym_hcb*, %struct.sym_hcb** %3, align 8
  %12 = load i32, i32* @nc_dstat, align 4
  %13 = call i32 @INB(%struct.sym_hcb* %11, i32 %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @sym_log_hard_error(%struct.Scsi_Host* %14, i32 %15, i32 %16)
  ret void
}

declare dso_local %struct.sym_hcb* @sym_get_hcb(%struct.Scsi_Host*) #1

declare dso_local i32 @INW(%struct.sym_hcb*, i32) #1

declare dso_local i32 @INB(%struct.sym_hcb*, i32) #1

declare dso_local i32 @sym_log_hard_error(%struct.Scsi_Host*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
